--- a/index.html
+++ b/index.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio</title>
+    <title>AgroBio</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
 
     <header>
         
-        <h1>Flávio Dantas</h1>
-        <span>Developer Web e Mobile</span>
-        <a href="#"class="botao">Saiba mais...</a>
+        <h1>AgroBio
+        </h1>
+        <span>Encontrando uma forma ecologica de aumentar a fertilidade do solo e a disponibilidade de nutrientes. </span>
+        <a href="#secao-apresentacao"class="botao">Saiba mais...</a>
 
     </header>
+    <section id ="seçao apresentacao"> 
+        <div>
+        <img src="https://avatars.githubusercontent.com/u/130257407?v=4" alt = " Foto do programador...">
+<h2> Programador e ensinado</h2>
+<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod similique nulla sint eaque veritatis assumenda eligendi excepturi corporis ut, dolor soluta, ex dolore ab nesciunt, officia consequuntur nam deserunt. Tenetur?</p>
+<a href="#"class="botao">Saiba mais...</a>
+</div>
+
+    </section>
 
     
 </body>
